--- a/sentences-compiler/Makefile
+++ b/sentences-compiler/Makefile
@@ -1,19 +1,20 @@
 #Makefile settings
 CXX = g++
 CXXFLAGS = -Wall -g -std=c++17
-CXXLIBS =
+CXXLIBS = -lstdc++fs
 SRC = ./src/
 
 EXECUTABLE = sentence-compiler.exe
 OBJECT_FILES = $(SRC)main.o \
-	$(SRC)tokenizer/tokenizer.o $(SRC)tokenizer/token.o $(SRC)tokenizer/stream.o
+	$(SRC)tokenizer/tokenizer.o $(SRC)tokenizer/token.o $(SRC)tokenizer/stream.o \
+	$(SRC)parser/parser.o $(SRC)parser/constructs.o
 
 # executable
 $(EXECUTABLE): $(OBJECT_FILES)
 	$(CXX) $(CXXFLAGS) -o $(EXECUTABLE) $(OBJECT_FILES) $(CXXLIBS)
 
 # src/
-$(SRC)main.o: $(SRC)main.cpp $(SRC)tokenizer/tokenizer.o
+$(SRC)main.o: $(SRC)main.cpp $(SRC)parser/parser.o
 	$(CXX) $(CXXFLAGS) -o $(SRC)main.o -c $(SRC)main.cpp
 
 # src/tokenizer/
@@ -23,6 +24,12 @@ $(SRC)tokenizer/stream.o: $(SRC)tokenizer/stream.cpp $(SRC)tokenizer/stream.h $(
 	$(CXX) $(CXXFLAGS) -o $(SRC)tokenizer/stream.o -c $(SRC)tokenizer/stream.cpp
 $(SRC)tokenizer/token.o: $(SRC)tokenizer/token.cpp $(SRC)tokenizer/token.h
 	$(CXX) $(CXXFLAGS) -o $(SRC)tokenizer/token.o -c $(SRC)tokenizer/token.cpp
+
+#src/parser/
+$(SRC)parser/parser.o: $(SRC)parser/parser.cpp $(SRC)parser/parser.h $(SRC)parser/constructs.o
+	$(CXX) $(CXXFLAGS) -o $(SRC)parser/parser.o -c $(SRC)parser/parser.cpp
+$(SRC)parser/constructs.o: $(SRC)parser/constructs.cpp $(SRC)parser/constructs.h
+	$(CXX) $(CXXFLAGS) -o $(SRC)parser/constructs.o -c $(SRC)parser/constructs.cpp
 
 clean:
 	rm $(EXECUTABLE) $(OBJECT_FILES)
