--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "include/arg-parser"]
 	path = include/arg-parser
-	url = https://gitlab.com/Stypox/arg-parser
+	url = https://github.com/Stypox/arg-parser
