--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "include/arg-parser"]
-	path = include/arg-parser
+[submodule "libs/arg-parser"]
+	path = libs/arg-parser
 	url = https://github.com/Stypox/arg-parser
