--- a/word-parser/Makefile
+++ b/word-parser/Makefile
@@ -1,7 +1,7 @@
 #Makefile settings
 CXX = g++
 
-CXXINCLUDE = -I../include/
+CXXINCLUDE = -I../libs/arg-parser/include
 CXXFLAGS = -Wall -g -std=c++17 $(CXXINCLUDE)
 CXXLIBS = 
 SRC = ./src/
